--- a/pet-rescue/pet-rescue.csproj
+++ b/pet-rescue/pet-rescue.csproj
@@ -204,7 +204,9 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Animal.cs" />
     <Compile Include="Models\Cat.cs" />
+    <Compile Include="Models\CatBreed.cs" />
     <Compile Include="Models\Dog.cs" />
+    <Compile Include="Models\DogBreed.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
