--- a/pet-rescue/pet-rescue.csproj
+++ b/pet-rescue/pet-rescue.csproj
@@ -204,7 +204,7 @@
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Adopter.cs" />
-    <Compile Include="Models\Animal.cs" />
+    <Compile Include="Models\Pet.cs" />
     <Compile Include="Models\Cat.cs" />
     <Compile Include="Models\CatBreed.cs" />
     <Compile Include="Models\Dog.cs" />
